k8s/deluge.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deluge
  labels:
    app: deluge
  namespace: default
spec:
  selector:
    matchLabels:
      app: deluge
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: deluge
        tier: backend
        track: stable
    spec:
      containers:   
      - name: deluge
        image: linuxserver/deluge:latest
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: deluge
  labels:
    app: deluge
spec:  
  selector:
    app: deluge
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
