k8s/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
  namespace: default
spec:
  selector:
    matchLabels:
      app: jackett
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: jackett
        tier: backend
        track: stable
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett:latest
        volumeMounts:
        - name: jackett-persistent-storage
          mountPath: /config
          subPath: jackett/config
        - name: jackett-persistent-storage
          mountPath: /downloads
          subPath: downloads/
      volumes:
      - name: jackett-persistent-storage
        persistentVolumeClaim:
          claimName: nfs-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: jackett
  labels:
    app: jackett
spec:
  selector:
    app: jackett
    tier: backend
  ports:
  - protocol: TCP
    port: 9117
