k8s/slackbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: slackbot
  labels:
    app: slackbot
  namespace: default
spec:
  selector:
    matchLabels:
      app: slackbot
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: slackbot
        tier: backend
        track: stable
    spec:
      containers:
      - name: bolt
        image: slackbot
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: slackbot
  labels:
    app: slackbot
spec:  
  selector:
    app: slackbot
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
