k8s/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: sonarr
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
        tier: backend
        track: stable
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        readinessProbe:
          tcpSocket:
            port: 8989
          initialDelaySeconds: 10
          periodSeconds: 20
        ports:
          - name: sonarr-port
            containerPort: 8989
            protocol: TCP
      imagePullSecrets:
      - name: docker-secret
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8989
