k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: "local.molloy.cloud"
    http:
      paths:
        - path: /sonarr
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                number: 80
